--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -1,34 +1,82 @@
 <!DOCTYPE html>
 <html>
-  <head>
+
+<head>
     <title>Traductor i18n</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <link rel="stylesheet" type="text/css" href="style.css" />
-  </head>
-  <body>
+
+    <script src="https://cdn.jsdelivr.net/npm/@stomp/stompjs@5.0.0/bundles/stomp.umd.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/sockjs-client@1/dist/sockjs.min.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
+</head>
+
+<body>
     <div class="full-screen-height">
         <div class="d-flex justify-content-center h-100 align-items-center">
             <div class="border rounded p-3">
-                <form method="POST" enctype="multipart/form-data" action="/">
+                <form id="mainForm" method="POST" enctype="multipart/form-data" action="/">
                     <table>
-                        <tr><td><label>Tipo</label></td><td>
-                            <select class="form-control" name="filetype">
-                                <option>Auto</option>
-                                <option>Properties</option>
-                                <option>JSON</option>
-                                <option>XML</option>
-                            </select>
-                        </td></tr>
-                        <tr><td><label>Archivo</label></td><td><input class="form-control" type="file" name="file" /></td></tr>
-                        <tr><td></td><td><input class="form-control" type="submit" value="Enviar a traducir" /></td></tr>
+                        <tr>
+                            <td><label>Tipo</label></td>
+                            <td>
+                                <select class="form-control" name="filetype">
+                                    <option>Auto</option>
+                                    <option>Properties</option>
+                                    <option>JSON</option>
+                                    <option>XML</option>
+                                </select>
+                            </td>
+                        </tr>
+                        <tr>
+                            <td><label>Archivo</label></td>
+                            <td><input class="form-control" type="file" name="file" /></td>
+                        </tr>
+                        <tr>
+                            <td></td>
+                            <td><input class="form-control" type="submit" value="Enviar a traducir" /></td>
+                        </tr>
                     </table>
                 </form>
             </div>
         </div>
     </div>
 
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
-  </body>
+    <div id="progress-window" class="modal fade" data-bs-backdrop="static" tabindex="-1">
+        <div class="modal-dialog modal-dialog-centered">
+            <div class="modal-content">
+                <div class="modal-body row">
+                    <div class="col-2">
+                        <div class="spinner-border" role="status">
+                            <span class="visually-hidden">Loading...</span>
+                        </div>
+                    </div>
+                    <div class="col-10">
+                        <div class="row">
+                            <p>Por favor, espere mientras traducimos su archivo...</p>
+                        </div>
+                        <div class="progress">
+                            <div class="progress-bar" role="progressbar" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100"></div>
+                        </div>
+                        <div class="d-flex flex-row">
+                            <p id="progress-current">---</p>
+                            <p class="px-1">/</p>
+                            <p id = "progress-total">---</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
+        crossorigin="anonymous"></script>
+    <script src="index.js"></script>
+</body>
+
 </html>
 
 
