--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -15,30 +15,33 @@
 <body>
     <div class="full-screen-height">
         <div class="d-flex justify-content-center h-100 align-items-center">
-            <div class="border rounded p-3">
-                <form id="mainForm" method="POST" enctype="multipart/form-data" action="/">
-                    <table>
-                        <tr>
-                            <td><label>Tipo</label></td>
-                            <td>
-                                <select class="form-control" name="filetype">
-                                    <option>Auto</option>
+            <div class="border rounded p-3 w-25 min-width">
+                <form id="main-form" method="POST" enctype="multipart/form-data" accept-charset="utf-8" action="/">
+                    <div class="d-flex flex-column">
+                        <div class="d-flex flex-row my-2">
+                            <div class="border rounded border-danger bg-danger-soft w-100 d-none">
+                                <p id="text-error-content" class="p-2 mb-0"></p>
+                            </div>
+                        </div>
+                        <div class="d-flex flex-row my-2">
+                            <input id="file-upload-field" class="form-control" type="file" name="file" />
+                        </div>
+                        <div class="d-flex flex-row w-100 my-2">
+                            <div class="me-2 d-flex flex-row flex-grow-1 align-items-center">
+                                <select id="filetype-field" class="form-select form-select-sm flex-grow-1 form-control dropdown" name="filetype">
+                                    <option value="Auto">Detectar formato</option>
                                     <option>Properties</option>
                                     <option>JSON</option>
                                     <option>XML</option>
                                 </select>
-                            </td>
-                        </tr>
-                        <tr>
-                            <td><label>Archivo</label></td>
-                            <td><input class="form-control" type="file" name="file" /></td>
-                        </tr>
-                        <tr>
-                            <td></td>
-                            <td><input class="form-control" type="submit" value="Enviar a traducir" /></td>
-                        </tr>
-                    </table>
+                            </div>
+                            <div class="ms-2 flex-grow-1">
+                                <input id="button-submit" class="form-control btn btn-primary" type="submit" value="Enviar a traducir" disabled/>
+                            </div>
+                        </div>
+                    </div>
                 </form>
+                <a id="auxiliar-download-link" class="d-none"></a>
             </div>
         </div>
     </div>
@@ -46,25 +49,37 @@
     <div id="progress-window" class="modal fade" data-bs-backdrop="static" tabindex="-1">
         <div class="modal-dialog modal-dialog-centered">
             <div class="modal-content">
-                <div class="modal-body row">
-                    <div class="col-2">
-                        <div class="spinner-border" role="status">
-                            <span class="visually-hidden">Loading...</span>
+                <div class="modal-body">
+                    <div class="d-flex flex-column">
+                        <div class="d-flex flex-row mb-3">
+                            <div class="d-flex flex-grow-1 align-items-center">
+                                <p class="mb-0">Por favor, espere mientras traducimos su archivo...</p>
+                            </div>
+                            <div class="d-flex">
+                                <div class="spinner-border text-primary" role="status">
+                                    <span class="visually-hidden"></span>
+                                </div>
+                            </div>
+                        </div>
+                        <div id="progress-container" class="opacity-animated hidden-by-opacity">
+                            <div class="progress">
+                                <div class="progress-bar" role="progressbar" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100"></div>
+                            </div>
+                            <div class="d-flex flex-row">
+                                <div class="flex-row flex-grow-1">
+                                    <p id="progress-current" class="d-inline mb-0">-</p>
+                                    <p class="px-1 d-inline mb-0">/</p>
+                                    <p id = "progress-total" class="d-inline mb-0">-</p>
+                                </div>
+                                <div class="d-flex flex-row">
+                                    <p id="progress-estimated-time" class="d-none mb-0">00:00:00</p>
+                                </div>
+                            </div>
                         </div>
                     </div>
-                    <div class="col-10">
-                        <div class="row">
-                            <p>Por favor, espere mientras traducimos su archivo...</p>
-                        </div>
-                        <div class="progress">
-                            <div class="progress-bar" role="progressbar" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100"></div>
-                        </div>
-                        <div class="d-flex flex-row">
-                            <p id="progress-current">---</p>
-                            <p class="px-1">/</p>
-                            <p id = "progress-total">---</p>
-                        </div>
-                    </div>
+                </div>
+                <div class="modal-footer">
+                    <button id="progress-button-request-cancel" class="btn btn-secondary">Cancelar</button>
                 </div>
             </div>
         </div>
@@ -78,21 +93,3 @@
 </body>
 
 </html>
-
-
-<!-- <body>
-    <form method="POST" enctype="multipart/form-data" action="/">
-        <table>
-            <tr><td>File type:</td><td>
-                <select name="filetype">
-                    <option>Auto</option>
-                    <option>Properties</option>
-                    <option>JSON</option>
-                    <option>XML</option>
-                </select>
-            </td></tr>
-            <tr><td>File to upload:</td><td><input type="file" name="file" /></td></tr>
-            <tr><td></td><td><input type="submit" value="Upload" /></td></tr>
-        </table>
-    </form>
-</body> -->
