--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -2,7 +2,10 @@
 <html>
 
 <head>
+    <meta charset="UTF-8">
     <title>Traductor i18n</title>
+    <link rel="icon" type="image/png" href="images/favicon.png" />
+
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <link rel="stylesheet" type="text/css" href="style.css" />
@@ -13,40 +16,63 @@
 </head>
 
 <body>
-    <div class="full-screen-height">
-        <div class="d-flex justify-content-center h-100 align-items-center">
-            <div class="border rounded p-3 w-25 min-width">
-                <form id="main-form" method="POST" enctype="multipart/form-data" accept-charset="utf-8" action="/">
-                    <div class="d-flex flex-column">
-                        <div class="d-flex flex-row my-2">
-                            <div class="border rounded border-danger bg-danger-soft w-100 d-none">
-                                <p id="text-error-content" class="p-2 mb-0"></p>
+    <div class="d-flex flex-column align-items-center full-screen-height px-5">
+        
+        <div class="position-absolute d-flex flex-row justify-content-around align-items-center w-100 mb-5">
+            <div>
+                <img src="images/Bilbomatica_an_Altia_Company.svg" class="logo-size"></img>
+            </div>
+            <div class="logo-scale">
+                <p class="w-100 text-center">Powered by</p>
+                <img src="images/web01-GV_itzuli_logotipo.svg" class="logo-size"></img>
+            </div>
+        </div>
+
+        <div class="d-flex flex-column h-100">
+            <div class="d-flex flex-column justify-content-center h-100 align-items-center max-width">
+                <div class="d-flex flex-row border rounded shadow px-5 py-3 form-size w-100">
+                    <form id="main-form" class="w-100" method="POST" enctype="multipart/form-data" accept-charset="utf-8" action="/">
+                        <div class="d-flex flex-column">
+                            <div class="my-2 d-flex flex-column">
+                                <h3>
+                                    Traductor automático de recursos
+                                </h3>
+                                <p class="text-secondary">
+                                    Este servicio enviará su archivo de recurso i18n en castellano
+                                    al Traductor Neuronal y se lo devolverá traducido al euskera
+                                    pasados unos segundos.
+                                </p>
+                            </div>
+                            <div class="d-flex flex-row my-2">
+                                <div class="border rounded border-danger bg-danger-soft w-100 d-none">
+                                    <p id="text-error-content" class="p-2 mb-0"></p>
+                                </div>
+                            </div>
+                            <div class="d-flex flex-row my-2">
+                                <input id="file-upload-field" class="form-control" type="file" name="file" />
+                            </div>
+                            <div class="d-flex flex-row justify-content-around w-100 my-2">
+                                <div class="me-2 d-flex flex-row align-items-center">
+                                    <select id="filetype-field" class="form-select form-select-sm flex-grow-1 form-control dropdown" name="filetype">
+                                        <option value="Auto">Detectar formato automáticamente</option>
+                                        <option>Properties</option>
+                                        <option>JSON</option>
+                                        <option>XML</option>
+                                    </select>
+                                </div>
+                                <div class="ms-2">
+                                    <input id="button-submit" class="form-control btn btn-primary" type="submit" value="Enviar a traducir" disabled/>
+                                </div>
                             </div>
                         </div>
-                        <div class="d-flex flex-row my-2">
-                            <input id="file-upload-field" class="form-control" type="file" name="file" />
-                        </div>
-                        <div class="d-flex flex-row w-100 my-2">
-                            <div class="me-2 d-flex flex-row flex-grow-1 align-items-center">
-                                <select id="filetype-field" class="form-select form-select-sm flex-grow-1 form-control dropdown" name="filetype">
-                                    <option value="Auto">Detectar formato</option>
-                                    <option>Properties</option>
-                                    <option>JSON</option>
-                                    <option>XML</option>
-                                </select>
-                            </div>
-                            <div class="ms-2 flex-grow-1">
-                                <input id="button-submit" class="form-control btn btn-primary" type="submit" value="Enviar a traducir" disabled/>
-                            </div>
-                        </div>
-                    </div>
-                </form>
-                <a id="auxiliar-download-link" class="d-none"></a>
+                    </form>
+                    <a id="auxiliar-download-link" class="d-none"></a>
+                </div>
             </div>
         </div>
     </div>
 
-    <div id="progress-window" class="modal fade" data-bs-backdrop="static" tabindex="-1">
+    <div id="progress-window" class="modal fade shadow" data-bs-backdrop="static" tabindex="-1">
         <div class="modal-dialog modal-dialog-centered">
             <div class="modal-content">
                 <div class="modal-body">
