--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -33,9 +33,9 @@
                                 Traductor automático de recursos
                             </h3>
                             <p class="text-secondary">
-                                Este servicio enviará su archivo de recurso i18n en castellano
-                                al Traductor Neuronal y se lo devolverá traducido al euskera
-                                pasados unos segundos.
+                                Puede subir un archivo de i18n en castellano para traducirlo automáticamente
+                                al euskera. Su archivo se enviará al Traductor Neuronal cuando sea posible y
+                                podrá descargar la traducción cuando esté lista.
                             </p>
                             <p class="text-secondary">
                                 Se aceptan archivos con las extensiones <code>.properties</code>,
@@ -47,8 +47,73 @@
                 </div>
 
                 <div class="card shadow ms-2 h-100 file-request-container-size">
-                    <div class="d-flex flex-column card-header h-100 overflow-y">
+                    
+                    <div class="d-flex flex-row-reverse card-body border-bottom py-1">
+                        <button id="button-clear-completed" class="btn btn-secondary btn-sm">
+                            <img src="icons/trash3-fill.svg" class="svg-inverted-color"/>
+                            &nbsp;
+                            <p>Borrar completados</p>
+                        </button>
+                    </div>
 
+                    <div id="file-request-empty-filler" class="d-flex d-none flex-column card-header h-100 justify-content-center">
+                        <p class="text-secondary text-center">No hay archivos en cola.</p>
+                    </div>
+                    <div id="file-request-container" class="d-flex d-none flex-column card-header h-100 overflow-auto">
+                        <div id="file-request-card-template" class="d-none border rounded bg-white m-1 p-2 shadow-sm">
+                            <div class="d-flex flex-row align-items-center">
+                                <div class="d-flex flex-row flex-grow-1 align-items-center">
+                                    <p class="mb-0" field="sourceName"></p>
+                                    <div class="btn" role="downloadSource">
+                                        <img src="icons/download.svg" alt="Descargar original"/>
+                                    </div>
+                                </div>
+                                <div class="px-2">
+                                    <div class="spinner-border spinner-border-sm text-primary d-none" role="progress-loading-spinner">
+                                    </div>
+                                </div>
+                                <div class="m-0">
+                                    <button class="btn btn-sm btn-outline-danger p-0" role="cancel">
+                                        <p>&#x2715;</p>
+                                    </button>
+                                </div>
+                            </div>
+
+                            <div role="progress-container" class="mt-2">
+                                <div class="progress slim-progress">
+                                    <div class="progress-bar progress-bar-stripped"></div>
+                                </div>
+                                <div role="progress-wait" class="d-flex flex-row d-none">
+                                    <p class="mb-0 small">En espera...</p>
+                                </div>
+                                <div role="progress-values" class="d-flex flex-row d-none text-secondary">
+                                    <div class="flex-row flex-grow-1">
+                                        <p role="progress-current" class="d-inline mb-0 small">-</p>
+                                        <p class="px-1 d-inline mb-0 small">/</p>
+                                        <p role="progress-total" class="d-inline mb-0 small">-</p>
+                                    </div>
+                                    <div class="d-flex flex-row">
+                                        <p role="progress-estimated-time" class="mb-0 small">00:00:00</p>
+                                    </div>
+                                </div>
+                            </div>
+
+                            <div role="progress-done" class="d-flex flex-row d-none align-items-center mt-2">
+                                <div class="flex-grow-1 d-flex flex-row align-items-center text-secondary">
+                                    <img src="icons/check-circle.svg" class="me-2 svg-gray-color">
+                                    <p class="mb-0 small">Completado</p>
+                                </div>
+                                <button class="btn btn-sm btn-success" role="downloadTranslated">
+                                    <img src="icons/download.svg" class="svg-inverted-color" alt="Descargar traducción"/>
+                                    &nbsp;
+                                    <p>Descargar</p>
+                                </button>
+                            </div>
+
+                            <div role="progress-error" class="border rounded border-danger bg-danger-soft w-100 d-none">
+                                <p role="progress-error-content" class="p-2 mb-0"></p>
+                            </div>
+                        </div>
                     </div>
 
                     <div class="card-body">
@@ -79,47 +144,9 @@
         </div>
     </div>
 
-    <div id="progress-window" class="modal fade shadow" data-bs-backdrop="static" tabindex="-1">
-        <div class="modal-dialog modal-dialog-centered">
-            <div class="modal-content">
-                <div class="modal-body">
-                    <div class="d-flex flex-column">
-                        <div class="d-flex flex-row mb-3">
-                            <div class="d-flex flex-grow-1 align-items-center">
-                                <p class="mb-0">Por favor, espere mientras traducimos su archivo...</p>
-                            </div>
-                            <div class="d-flex">
-                                <div class="spinner-border text-primary" role="status">
-                                    <span class="visually-hidden"></span>
-                                </div>
-                            </div>
-                        </div>
-                        <div id="progress-container" class="opacity-animated hidden-by-opacity">
-                            <div class="progress">
-                                <div class="progress-bar" role="progressbar" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100"></div>
-                            </div>
-                            <div class="d-flex flex-row">
-                                <div class="flex-row flex-grow-1">
-                                    <p id="progress-current" class="d-inline mb-0">-</p>
-                                    <p class="px-1 d-inline mb-0">/</p>
-                                    <p id = "progress-total" class="d-inline mb-0">-</p>
-                                </div>
-                                <div class="d-flex flex-row">
-                                    <p id="progress-estimated-time" class="d-none mb-0">00:00:00</p>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <div class="modal-footer">
-                    <button id="progress-button-request-cancel" class="btn btn-secondary">Cancelar</button>
-                </div>
-            </div>
-        </div>
-    </div>
-
 
     <script src="libraries/bootstrap.bundle.min.js"></script>
+    <script src="fileRequestCard.js"></script>
     <script src="index.js"></script>
 </body>
 
